[gd_scene load_steps=6 format=3 uid="uid://dx7snd2a287mq"]

[ext_resource type="Script" uid="uid://uj5v7xgh30og" path="res://game/objects/doors/scripts/door_visibility_component.gd" id="1_4qurw"]
[ext_resource type="Texture2D" uid="uid://7h82mf05c60t" path="res://game/objects/doors/sprites/doors.png" id="2_ydtvw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p1ird"]
size = Vector2(16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_03aa0"]
atlas = ExtResource("2_ydtvw")
region = Rect2(0, 0, 16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4qurw"]
size = Vector2(16, 16)

[node name="GenericDoor" type="StaticBody2D"]
collision_layer = 16
collision_mask = 16

[node name="DoorVisibilityComponent" type="Node2D" parent="."]
script = ExtResource("1_4qurw")

[node name="Area2D" type="Area2D" parent="DoorVisibilityComponent"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DoorVisibilityComponent/Area2D"]
shape = SubResource("RectangleShape2D_p1ird")

[node name="Sprite2D" type="Sprite2D" parent="DoorVisibilityComponent"]
texture_filter = 1
texture = SubResource("AtlasTexture_03aa0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_4qurw")

[connection signal="body_entered" from="DoorVisibilityComponent/Area2D" to="DoorVisibilityComponent" method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="DoorVisibilityComponent/Area2D" to="DoorVisibilityComponent" method="_on_area_2d_body_exited"]
